--- a/.env
+++ b/.env
@@ -22,10 +22,10 @@ APP_SECRET=6566ae7d4a0ca87451103d15c71f8f80
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
+# DATABASE_URL="postgresql://postgres:yannis95@127.0.0.1:5432/infeco"
+# DATABASE_URL="postgresql://nom_utilisateur:mot_de_passe@localhost:5432/nom_de_la_base_de_donnees"
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/infeco"
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
