--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,18 +1,34 @@
 security:
+    encoders:
+        App\Entity\User:
+            algorithm: bcrypt
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
+                
+        # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
+            form_login:
+                # "app_login" is the name of the route created previously
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
+            logout:
+                path: app_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -23,7 +39,18 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/liste-appartement, roles: ROLE_AGENCE }
+        - { path: ^/liste-locataire, roles: ROLE_AGENCE }
+        - { path: ^/ajout-locataire, roles: ROLE_AGENCE }
+        - { path: ^/delete-locataire/, roles: ROLE_AGENCE }
+        - { path: ^/modifier-locataire/, roles: ROLE_AGENCE }
+        - { path: ^/fiche-locataire/, roles: ROLE_AGENCE }
+        - { path: ^/ajout-appartement, roles: ROLE_AGENCE }
+        - { path: ^/delete-appartement/, roles: ROLE_AGENCE }
+        - { path: ^/modifier-appartement/, roles: ROLE_AGENCE }
+        - { path: ^/fiche-appartement/, roles: ROLE_AGENCE }
+        - { path: ^/delete-locAppart/, roles: ROLE_AGENCE }
+        - { path: ^/reinit-appartement/, roles: ROLE_AGENCE }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
@@ -38,3 +65,4 @@ when@test:
                 cost: 4 # Lowest possible value for bcrypt
                 time_cost: 3 # Lowest possible value for argon
                 memory_cost: 10 # Lowest possible value for argon
+ 
