--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,6 +6,26 @@ test:
     path: /test
     controller: App\Controller\TestController::index
 
+    
+dashboard:
+    path: /
+    controller: App\Controller\AppartementController::getAppartements
+
+# app_login_index:
+#     path: /
+#     controller: App\Controller\SecurityController::login
+app_login:
+    path: /login
+    controller: App\Controller\LoginController::index
+
+app_logout:
+    path: /logout
+    methods: GET
+
+register: 
+  path: /register
+  controller: App\Controller\RegistrationController::register
+
 
 # Locataire
 
