enregistrement du solde

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,6 +1,9 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
+        driver: 'pdo_pgsql'
+        server_version: '13'
+        charset: utf8
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
@@ -24,6 +27,18 @@ doctrine:
 #             charset: utf8
 #             collate: utf8_unicode_ci
 #         url: '%env(resolve:DATABASE_URL)%'
+# doctrine:
+#     dbal:
+#         # configure these for your database server
+#         driver: 'pdo_pgsql'
+#         server_version: '13'
+#         url: '%env(resolve:DATABASE_URL)%'
+#         charset: utf8
+#     orm:
+#         auto_generate_proxy_classes: true
+#         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+#         auto_mapping: true
+
 
 
 when@test:
