--- a/.env
+++ b/.env
@@ -17,17 +17,19 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=6566ae7d4a0ca87451103d15c71f8f80
+APP_DEBUG=true
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 # DATABASE_URL="postgresql://postgres:yannis95@127.0.0.1:5432/infeco"
-# DATABASE_URL="postgresql://nom_utilisateur:mot_de_passe@localhost:5432/nom_de_la_base_de_donnees"
+DATABASE_URL="postgresql://infeco_users:Isolutionweb123@postgresql-infeco.alwaysdata.net:5432/infeco_bdinfeco"
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/infeco"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/infeco"
 ###< doctrine/doctrine-bundle ###
-
+e7,LBszYIXCO
+hfno4005_userspgsql
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
@@ -36,5 +38,13 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+# MAILER_DSN=smtp://yannis@isolutionweb.fr:NQs8mUK5m86@mail.isolutionweb.fr:465?encryption=ssl
+
 ###< symfony/mailer ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
