--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,14 +5,16 @@ security:
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+            algorithm: auto
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
-                class: App\Entity\User
+                class: App\Entity\Users
                 property: email
+        # used to reload user from session & other features (e.g. switch_user)
                 
         # used to reload user from session & other features (e.g. switch_user)
     firewalls:
@@ -24,6 +26,7 @@ security:
             provider: app_user_provider
             form_login:
                 # "app_login" is the name of the route created previously
+                default_target_path: /dashboard
                 login_path: app_login
                 check_path: app_login
                 enable_csrf: true
@@ -51,6 +54,8 @@ security:
         - { path: ^/fiche-appartement/, roles: ROLE_AGENCE }
         - { path: ^/delete-locAppart/, roles: ROLE_AGENCE }
         - { path: ^/reinit-appartement/, roles: ROLE_AGENCE }
+        - { path: ^/dashboard, roles: ROLE_AGENCE }
+        # - { path: ^/, roles: ROLE_AGENCE }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
